WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23247
createSVGPathSegCurvetoCubicSmoothAbs doesn't set y2 correctly
https://bugs.webkit.org/show_bug.cgi?id=23247
Summary
createSVGPathSegCurvetoCubicSmoothAbs doesn't set y2 correctly
Darin Adler
Reported
2009-01-11 21:33:48 PST
I noticed this while dealing with unused variable warnings.
Attachments
patch
(240.96 KB, patch)
2009-01-11 23:15 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-01-11 23:15:04 PST
Created
attachment 26625
[details]
patch
mitz
Comment 2
2009-01-11 23:41:18 PST
Comment on
attachment 26625
[details]
patch
> + m_path = &temporaryPath; > + if (!parseSVG(d, true)) > + return false;
Leaving m_path pointing at a temporary is scary, but not new to this patch. r=me
Darin Adler
Comment 3
2009-01-11 23:49:14 PST
http://trac.webkit.org/changeset/39819
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug